syntax = "proto3";

option go_package = "github.com/ohsu-comp-bio/funnel/events";

package events;

import "tes.proto";
//import "google/api/annotations.proto";

message Metadata {
  map<string, string> value = 1;
}

message Outputs {
  repeated tes.OutputFileLog value = 1;
}

message SystemLog {
  string msg = 1;
  string level = 2;
  map<string, string> fields = 3;
}

enum Type {
  UNKNOWN = 0;
  TASK_STATE = 1;
  TASK_START_TIME = 2; 
  TASK_END_TIME = 3;
  TASK_OUTPUTS = 4;
  TASK_METADATA = 5;
  EXECUTOR_START_TIME = 6;
  EXECUTOR_END_TIME = 7;
  EXECUTOR_EXIT_CODE = 8;
  EXECUTOR_STDOUT = 11;
  EXECUTOR_STDERR = 12;
  SYSTEM_LOG = 13;
  TASK_CREATED = 14;
}

message Event {
  string id = 1;
  string timestamp = 2;
  oneof data {
    tes.State state = 3;
    string start_time = 4;
    string end_time = 5;
    Outputs outputs = 6;
    Metadata metadata = 7;
    int32 exit_code = 10;
    string stdout = 13;
    string stderr = 14;
    SystemLog system_log = 15;
    tes.Task task = 19;
  }
  uint32 attempt = 16;
  uint32 index = 17;
  Type type = 18;
}

message WriteEventResponse{}

/**
 * Event Service
 */
service EventService {
  rpc WriteEvent(Event) returns (WriteEventResponse) {};
}
