syntax = "proto3";

package tasklogger;

import "tes.proto";
import "google/api/annotations.proto";

message UpdateExecutorLogsRequest {
  string id = 1;
  int64 step = 2;
  tes.ExecutorLog log = 4;
  string worker_id = 5;
}

message UpdateExecutorLogsResponse {}

message UpdateTaskLogsRequest {
  string id = 1;
  tes.TaskLog task_log = 2;
}

message UpdateTaskLogsResponse {}

message UpdateTaskStateRequest {
  string id = 1;
  tes.State state = 2;
}

message UpdateTaskStateResponse {}

/**
 * TaskLogger Service
 */
service TaskLoggerService {
  rpc UpdateExecutorLogs(UpdateExecutorLogsRequest) returns (UpdateExecutorLogsResponse) {};
  rpc UpdateTaskLogs(UpdateTaskLogsRequest) returns (UpdateTaskLogsResponse) {};
  rpc UpdateTaskState(UpdateTaskStateRequest) returns (UpdateTaskStateResponse) {};
}
